<?xml version="1.0"?>
<package>
  <name>myproject14</name>
  <version>1.1.1</version>
  <description>The moveit_motion_plan package</description>
  <license>BSD</license>

  <author email="eduard.auer@s2014.tu-chemnitz.de">Eduard Auer</author>
  <maintainer email="eduard.auer@s2014.tu-chemnitz.de">Eduard Auer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>kinova_driver</build_depend>  
  <build_depend>kinova_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>pluginlib</run_depend>
  
  <run_depend>kinova_driver</run_depend>
  <run_depend>kinova_msgs</run_depend> 
  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
